# effect-of-noise-in-qfms

./: .gitignore  404.html  CITATION.cff  Dockerfile  LICENSE  README.md  create_experiment.sh  index.html  list_mlruns.sh  list_runs.sh  mkdocs.yml  pyproject.toml  requirements.txt  session_store.db  sitemap.xml  slurm_job.sh  stats.json  sweep_circuits_seed.sh  sweep_encodings_seed.sh  sweep_noise_circuits_seed.sh  sweep_qubits_circuits_seed.sh  sweep_qubits_encoding_circuits_seed.sh  sweep_qubits_noise_circuits_seed.sh  sweep_seeds.sh
.github/workflows/: build-docker.yml  docs.yml
coefficients/: index.html
coefficients1d/: index.html
coefficients1d_rx/: index.html
coefficients1d_ry/: index.html
coefficients2d/: index.html
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
docs/: coefficients.md  coefficients1d.md  coefficients1d_rx.md  coefficients1d_ry.md  coefficients2d.md  entanglement.md  expressibility.md  index.md  setup.md  training.md
docs/figures/: invert_images.sh
entanglement/: index.html
expressibility/: index.html
notebooks/: check_best_encoding.py  coeff_noise.py  coeff_noise_ansatz.py  coeff_noise_freq_runs.py  coeff_noise_runs.py  coeff_noise_sampling.py  coeff_noise_type.py  csv_export.py  ent_noise.py  ent_noise_ansatz.py  ent_noise_type.py  expr_noise.py  expr_noise_ansatz.py  expr_noise_type.py  generate_all.sh  helper.py
notebooks/rplots/: Makefile  gen_img.sh  layout.r  plot_coeffs.r  plot_coeffs_dims1.r  plot_coeffs_dims2.r  plot_coeffs_encoding.r  plot_coeffs_mean.r  plot_coeffs_mean_dims1.r  plot_coherent.r  plot_ent.r  plot_ent_full.r  plot_expr.r
notebooks/runs/: coefficient_ansatz_runs.py  coefficient_noise_runs.py  coefficient_runs.py  encoding_runs.py  entanglement_ansatz_runs.py  entanglement_noise_runs.py  entanglement_runs.py  expressibility_noise_runs.py  expressibility_runs.py  training_runs.py
plotting/: RESULTS.md
plotting/rplots/: Makefile  conv_img.sh  img.tex  layout.r  plot_coeffs.r  plot_coeffs_all.r  plot_coeffs_encoding.r  plot_coeffs_mean.r  plot_coeffs_phase.r  plot_coherent.r  plot_ent.r  plot_expr.r  plot_single.r  plot_training.r
scripts/: plot_all.sh  plot_single.sh  run.sh  run_coefficient_config.sh  run_entanglement_config.sh  run_experiments.sh  run_expressibility_config.sh  run_paper_experiments.sh  run_training_config.sh
scripts/training/: run.sh  run_ansatz.sh  run_noisetype.sh  run_qubit.sh  run_seed.sh
search/: search_index.json
setup/: index.html
slurm/: check_logs.sh  clear_logs.sh  create_experiment.sh  list_mlruns.sh  list_runs.sh  slurm_job.sh  sweep_circuits_seed.sh  sweep_encoding_circuits_seed.sh  sweep_noise_circuits_seed.sh  sweep_qubits_encoding_circuits_seed.sh  sweep_qubits_noise_circuits_seed.sh  sweep_seeds.sh
src/: entangling.py  model.py
src/disentangling_entanglement/: __init__.py  __main__.py  pipeline_registry.py
src/disentangling_entanglement/helpers/: ansaetze.py  entanglement.py  expressibility.py  model.py  utils.py
src/disentangling_entanglement/pipelines/data_generation/: nodes.py  pipeline.py
src/disentangling_entanglement/pipelines/data_science/coefficients/: nodes.py  pipeline.py
src/disentangling_entanglement/pipelines/data_science/entanglement/: nodes.py  pipeline.py
src/disentangling_entanglement/pipelines/data_science/expressibility/: nodes.py  pipeline.py
src/disentangling_entanglement/pipelines/data_science/training/: nodes.py  pipeline.py
src/disentanting_entanglement/: __init__.py  __main__.py  pipeline_registry.py
src/disentanting_entanglement/helpers/: entanglement.py  model.py
src/disentanting_entanglement/pipelines/data_generation/: nodes.py
src/disentanting_entanglement/pipelines/data_science/entanglement/: nodes.py  pipeline.py
src/disentanting_entanglement/pipelines/visualization/: pipeline.py
src/effects_of_noise_in_qfm/: __init__.py  __main__.py  pipeline_registry.py
src/effects_of_noise_in_qfm/datasets/: mlflow_dataset.py
src/effects_of_noise_in_qfm/pipelines/data_generation/: nodes.py  pipeline.py
src/effects_of_noise_in_qfm/pipelines/data_science/coefficients/: nodes.py  pipeline.py
src/effects_of_noise_in_qfm/pipelines/data_science/entanglement/: nodes.py
src/effects_of_noise_in_qfm/pipelines/data_science/expressibility/: nodes.py
src/effects_of_noise_in_qfm/pipelines/data_science/training/: nodes.py  pipeline.py
tests/: test_run.py
training/: index.html
