
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "disentangling_entanglement"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
disentangling-entanglement = "disentangling_entanglement.__main__:main"

[tool.kedro]
package_name = "disentangling_entanglement"
project_name = "disentangling-Entanglement"
kedro_init_version = "0.19.6"
tools = [ "Testing", "Custom Logging", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/disentangling_entanglement -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "disentangling_entanglement.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.poetry]
name = "disentangling-entanglement-in-qml"
version = "0.1.0"
description = ""
authors = ["Melvin Strobl <lc3267@kit.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
mlflow = "^2.18.0"
pytest = "^8.2.2"
kedro = "^0.19.10"
kedro-mlflow = "^0.12.2"
kedro-viz = "^10.1.0"
qml-essentials = "^0.1.18"
