
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "effects_of_noise_in_qfm"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
effects_of_noise_in_qfm = "effects_of_noise_in_qfm.__main__:main"

[tool.kedro]
package_name = "effects_of_noise_in_qfm"
project_name = "effects_of_noise_in_qfm"
kedro_init_version = "0.19.6"
tools = [ "Testing", "Custom Logging", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/effects_of_noise_in_qfm -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "effects_of_noise_in_qfm.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.poetry]
name = "effects_of_noise_in_qfm"
version = "0.1.0"
description = ""
authors = ["Melvin Strobl <lc3267@kit.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
mlflow = "^2.18.0"
pytest = "^8.2.2"
kedro = "^0.19.11"
kedro-mlflow = "^0.14.3"
kedro-viz = "^10.1.0"
qml-essentials = "^0.1.34"
kaleido = "0.2.1"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.11"
mkdocs-glightbox = "^0.4.0"
markdown-include = "^0.8.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.11"
mkdocs-glightbox = "^0.4.0"
markdown-include = "^0.8.1"

[tool.kedro_telemetry]
project_id = "9afb68ff0fe045cf975e94fc0ede1279"
